--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   flutter:
     sdk: flutter
   provider: ^4.0.5
+  fl_chart: ^0.9.0
 
 
   # The following adds the Cupertino Icons font to your application.
