--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
     sdk: flutter
   provider: ^4.0.5
   fl_chart: ^0.9.0
+  intl: ^0.16.1
 
 
   # The following adds the Cupertino Icons font to your application.
