--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
     sdk: flutter
   provider: ^4.0.5
   intl: ^0.16.1
+  flutter_form_builder: ^3.6.1
 
 
   # The following adds the Cupertino Icons font to your application.
